    the '__doc__' attribute on the descriptor.  

  - Usage of version_id_col on a backend that supports 
    cursor.rowcount for execute() but not executemany() now works
    when a delete is issued (already worked for saves, since those
    don't use executemany()). For a backend that doesn't support 
    cursor.rowcount at all, a warning is emitted the same
    as with saves.  [ticket:1761]

  - internal getattr(), setattr(), getcommitted() methods
    on ColumnProperty, CompositeProperty, RelationshipProperty
    have been underscored, signature has changed.
    
- sql
  - Restored some bind-labeling logic from 0.5 which ensures
    that tables with column names that overlap another column
    of the form "<tablename>_<columnname>" won't produce 
    errors if column._label is used as a bind name during
    an UPDATE.  Test coverage which wasn't present in 0.5
    has been added.  [ticket:1755]

  - the Numeric type raises an *enormous* warning when expected
    to convert floats to Decimal from a DBAPI that returns floats.
    This includes SQLite, Oracle, Sybase, MS-SQL.
    [ticket:1759]

  - Fixed an error in expression typing which caused an endless
    loop for expressions with two NULL types.
  
  - Fixed bug in execution_options() feature whereby the existing
    Transaction and other state information from the parent 
    connection would not be propagated to the sub-connection.

  - Added new 'compiled_cache' execution option.  A dictionary 
    where Compiled objects will be cached when the Connection
    compiles a clause expression into a dialect- and parameter- 
    specific Compiled object.  It is the user's responsibility to
    manage the size of this dictionary, which will have keys
    corresponding to the dialect, clause element, the column
    names within the VALUES or SET clause of an INSERT or UPDATE, 
    as well as the "batch" mode for an INSERT or UPDATE statement.
    
- ext
  - the compiler extension now allows @compiles decorators