@@ -291,7 +291,7 @@ class ZooMarkTest(TestBase):
     def test_profile_1_create_tables(self):
         self.test_baseline_1_create_tables()
 
-    @profiling.function_call_count(12178, {'2.4':12178})
+    @profiling.function_call_count(9225)
     def test_profile_1a_populate(self):
         self.test_baseline_1a_populate()
 
